# sdk-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml
demo/macos/RustExample/: AppDelegate.h  AppDelegate.m  ViewController.h
demo/macos/RustExample.xcodeproj/: project.pbxproj
demo/macos/RustSDK/: lib.h  wrapper.cpp
demo/rust/src/: main.rs
demo/windows/RustCSharp/RustCSharp/: Program.cs
docs/: CNAME  _config.yml  api.md  basic_apis.md  defined_events.md  index.md  integration.md  migration.md  system_events.md
examples/macos/RustExample/: AppDelegate.m  ViewController.mm  main.m
examples/macos/RustExampleTests/: RustExampleTests.m
examples/macos/RustExampleUITests/: RustExampleUITests.m
examples/macos/RustSDK/: lib.h  wrapper.cpp  wrapper.hpp
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/windows/RustCSharp/: RustCSharp.sln
src/: lib.rs  main.rs
src/common/: api.rs  crypto.rs  file_manager.rs  mod.rs  shared_manager.rs  system_info_manager.rs  utils.rs
src/model/: boeventmodel.rs  bomanifestmodel.rs  event.rs  manifest.rs  map_id.rs  mod.rs  payload.rs  storage.rs
src/network/: boeventapi.rs  boeventsecuredataapi.rs  bohttp.rs  bomanifestapi.rs  event_api.rs  event_personal_api.rs  http.rs  manifest_api.rs  mod.rs  network.rs
src/utility/: bocommonutility.rs  boerror.rs  bofilemanager.rs  bosharedmanager.rs  bosysteminfomanager.rs  common_utility.rs  file_manager.rs  mod.rs  shared_manager.rs  system_info_manager.rs
tests/: boeventmodeltest.rs  bonetworktest.rs  boutilitytest.rs  main.test.rs
(+3 files in other folders)
